--- a/cclt/app/views/Categories/CategoriesViewCell.xib
+++ b/cclt/app/views/Categories/CategoriesViewCell.xib
@@ -8,28 +8,44 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoriesViewCell" id="gTV-IL-0wX" customClass="CategoriesViewCell" customModule="cclt">
-            <rect key="frame" x="0.0" y="0.0" width="296" height="212"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="296" height="212"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FCy-H1-dFj">
-                        <rect key="frame" x="0.0" y="0.0" width="296" height="212"/>
+                        <rect key="frame" x="8" y="8" width="23" height="28"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="23" id="8S4-4n-UdR"/>
+                            <constraint firstAttribute="height" constant="28" id="KYD-xk-nhQ"/>
+                        </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nxt-QC-Seh">
+                        <rect key="frame" x="51" y="0.0" width="249" height="44"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="44" id="MnH-k4-CDT"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="FCy-H1-dFj" secondAttribute="trailing" id="1ld-O0-sbL"/>
-                <constraint firstItem="FCy-H1-dFj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="YgX-tY-ReE"/>
-                <constraint firstItem="FCy-H1-dFj" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Zfj-Lp-DTr"/>
-                <constraint firstAttribute="bottom" secondItem="FCy-H1-dFj" secondAttribute="bottom" id="ggd-5f-vzq"/>
+                <constraint firstItem="FCy-H1-dFj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="8mk-yT-b7q"/>
+                <constraint firstAttribute="centerY" secondItem="FCy-H1-dFj" secondAttribute="centerY" id="Ako-rx-ze2"/>
+                <constraint firstItem="nxt-QC-Seh" firstAttribute="leading" secondItem="FCy-H1-dFj" secondAttribute="trailing" constant="20" id="o3x-bf-B2a"/>
+                <constraint firstAttribute="centerY" secondItem="nxt-QC-Seh" secondAttribute="centerY" id="tF0-w4-hpp"/>
+                <constraint firstAttribute="trailing" secondItem="nxt-QC-Seh" secondAttribute="trailing" constant="20" id="xeW-dX-0c9"/>
             </constraints>
-            <size key="customSize" width="296" height="212"/>
+            <size key="customSize" width="341" height="193"/>
             <connections>
                 <outlet property="imgView" destination="FCy-H1-dFj" id="WiF-Wi-eNA"/>
+                <outlet property="textLabel" destination="nxt-QC-Seh" id="0B2-WT-bHx"/>
+                <outlet property="titleLabel" destination="nxt-QC-Seh" id="nyX-YD-52k"/>
             </connections>
-            <point key="canvasLocation" x="256" y="345"/>
+            <point key="canvasLocation" x="30" y="317"/>
         </collectionViewCell>
     </objects>
 </document>
